Add new object of medico via button, partially implemented.

--- a/medico/templates/medico/medico_index.html
+++ b/medico/templates/medico/medico_index.html
@@ -10,7 +10,7 @@
         <center><h1>Médicos</h1></center>
 
         <div align="right" style="margin-right: 7%">
-            <a href=""><button type="submit" class="btn btn-primary">Cadastrar Novo</button></a>
+            <a href="{% url 'medico:medico_new' %}"><button type="submit" class="btn btn-primary">Cadastrar Novo</button></a>
         </div>
         <br>
 
