Alterações no modelo de Módulo

--- a/modulo/templates/modulo/modulo_edit.html
+++ b/modulo/templates/modulo/modulo_edit.html
@@ -23,9 +23,13 @@
             </tr>
             </thead>
             <tbody>
+             <tr>
+                <td align="right">Id:</td>
+                <td align="left">{{id}}</td>
+            </tr>
             <tr>
                 <td align="right">Código:</td>
-                <td align="left">{{codigo}}</td>
+                <td align="left">{{form.codigo}}</td>
             </tr>
             <tr>
                 <td align="right">Nome:</td>
