--- a/modulo/templates/modulo/modulo_new.html
+++ b/modulo/templates/modulo/modulo_new.html
@@ -24,8 +24,12 @@
             </thead>
             <tbody>
             <tr>
+                <td align="right">Id:</td>
+                <td align="left">{{id}}</td>
+            </tr>
+            <tr>
                 <td align="right">Código:</td>
-                <td align="left">{{codigo}}</td>
+                <td align="left">{{form.codigo}}</td>
             </tr>
             <tr>
                 <td align="right">Nome:</td>
@@ -67,6 +71,9 @@
     {{form.custo_mensal.errors}}
     {{form.capacidade.errors}}
     {{form.preco_do_tratamento.errors}}
+    {{ form.codigo.errors }}
+
+    {{ form.errors }} {# Melhorar a exibição de erros para o caso de Código e Nome já existirem #}
 </form>
 
 {% endblock body %}
