Module Classe_Social fully implemented, minor adjustment on Modulo and base.html

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -30,6 +30,7 @@
                     <li {% block medico %}{% endblock %}><a href="{% url 'medico:medico_index' %}">Médicos{% block medico_span %}{% endblock %}</a></li>
                     <li {% block modulo %}{% endblock %}><a href="{% url 'modulo:modulo_index' %}">Módulos{% block modulo_span %}{% endblock %}</a></li>
                     <li {% block emprestimo %}{% endblock %}><a href="{% url 'emprestimo:emprestimo_index' %}">Empréstimo{% block emprestimo_span %}{% endblock %}</a></li>
+                    <li {% block classe_social %}{% endblock %}><a href="{% url 'classe_social:classe_social_index' %}">Classe Social{% block classe_social_span %}{% endblock %}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
