--- a/modulo/templates/modulo/modulo_index.html
+++ b/modulo/templates/modulo/modulo_index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title%}Editar Médico{% endblock title%}
+{% block title%}Módulos{% endblock title%}
 {% block home %}{% endblock %}
 {% block home_span %}{% endblock %}
 {% block medico %}{% endblock %}
