--- a/area/templates/area/area_new.html
+++ b/area/templates/area/area_new.html
@@ -35,6 +35,14 @@
                 <td align="left">{{form.nome}}</td>
             </tr>
             <tr>
+                <td align="right">Nome:</td>
+                <td align="left">{{form_area_classesocial.entrada}}</td>
+            </tr>
+             <tr>
+                <td align="right">Nome:</td>
+                <td align="left">{{form_area_classesocial.entrada}}</td>
+            </tr>
+            <tr>
                 <td align="right"><a  style="text-decoration:none;" href="{% url 'area:area_index' %}"><button type="button" class="btn btn-warning btn-block" >Voltar</button></a></td>
                 <td align="left"><button type="submit" class="btn btn-success btn-block" >Cadastrar</button></td>
             </tr>
