Retirada do default=1 e acerto de area_classe_social

--- a/area/templates/area/area_new.html
+++ b/area/templates/area/area_new.html
@@ -35,13 +35,14 @@
                 <td align="left">{{form.nome}}</td>
             </tr>
             <tr>
-                <td align="right">Nome:</td>
+                <td>Entradas Iniciais</td>
+            </tr>
+            {% for classe_social in classes_sociais %}
+            <tr>
+                <td align="right">Classe {{classe_social.nome}}</td>
                 <td align="left">{{form_area_classesocial.entrada}}</td>
             </tr>
-             <tr>
-                <td align="right">Nome:</td>
-                <td align="left">{{form_area_classesocial.entrada}}</td>
-            </tr>
+            {% endfor %}
             <tr>
                 <td align="right"><a  style="text-decoration:none;" href="{% url 'area:area_index' %}"><button type="button" class="btn btn-warning btn-block" >Voltar</button></a></td>
                 <td align="left"><button type="submit" class="btn btn-success btn-block" >Cadastrar</button></td>
