--- a/area/templates/area/area_edit.html
+++ b/area/templates/area/area_edit.html
@@ -29,14 +29,30 @@
              <tr>
                 <td align="right">Id:</td>
                 <td align="left">{{id}}</td>
+                  <td></td>
             </tr>
             <tr>
                 <td align="right">Nome:</td>
                 <td align="left">{{form.nome}}</td>
+                 <td></td>
+            </tr>
+            <tr>
+
+                <td></td>
+                <td align="left">Entradas Iniciais</td>
+                <td align="left" >Desvios</td>
             </tr>
 
+            {% for classe_social in classes_sociais %}
+            <tr>
+                <td align="right">Classe {{classe_social.nome}}</td>
+                <td align="right">{{form_area_classesocial.entrada}} </td>
+                <td align="left">{{form_area_classesocial.desvios}}</td>
+            </tr>
+            {% endfor%}
             <tr>
                 <td align="right"><a  style="text-decoration:none;" href="{% url 'area:area_index' %}"><button type="button" class="btn btn-warning btn-block" >Voltar</button></a></td>
+                 <td></td>
                 <td align="left"><button type="submit" class="btn btn-success btn-block" >Salvar</button></td>
             </tr>
             </tbody>
