--- a/area/templates/area/area_new.html
+++ b/area/templates/area/area_new.html
@@ -22,6 +22,7 @@
             <thead>
             <tr>
                 <td align="right"><b>Atributos</b></td>
+                <td></td>
                 <td align="left"><b>Valores</b></td>
             </tr>
             </thead>
@@ -54,8 +55,9 @@
             {% endfor%}
 
             <tr>
-                <td align="right"><a  style="text-decoration:none;" href="{% url 'area:area_index' %}"><button type="button" class="btn btn-warning btn-block" >Voltar</button></a></td>
                 <td></td>
+                <td align="right"><a  style="text-decoration:none;" href="{% url 'area:area_index' %}"><button type="button" class="btn btn-warning btn-block" >Voltar</button></a></td>
+
                 <td align="left"><button type="submit" class="btn btn-success btn-block" >Cadastrar</button></td>
 
             </tr>
@@ -65,6 +67,7 @@
     {{form.nome.errors}}
 
 
+    {{ form_area_classesocial.errors }}
     {{ form.errors }} {# Melhorar a exibição de erros para o caso de Código e Area já existirem #}
 </form>
 
