--- a/area/templates/area/area_new.html
+++ b/area/templates/area/area_new.html
@@ -46,11 +46,13 @@
                 <td align="left" >Desvios</td>
             </tr>
 
-             {% for b in form_ac%}
+
+             {% for classe, nome in list%}
             <tr>
-                <td align="right">Classe </td>
-                <td align="right">{{b.entrada}}</td>
-                <td align="left">{{b.desvios}}</td>
+                <td align="right">Classe {{ nome}} </td>
+                <td align="right">{{classe.entrada}}</td>
+                <td align="left">{{classe.desvios}}</td>
+
             </tr>
             {% endfor%}
 
@@ -65,8 +67,6 @@
         </table>
     </div>
     {{form.nome.errors}}
-
-
     {{ form_area_classesocial.errors }}
     {{ form.errors }} {# Melhorar a exibição de erros para o caso de Código e Area já existirem #}
 </form>
