Implementa login e logout + mudanças de layout na tela de login

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">App Saúde</a>
+                <a class="navbar-brand" href="#">Saúde em Jogo</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,7 +39,7 @@
                         <li><a href="">Admin</a></li>
                         <li><a href="#">Usuario</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Logout</a></li>
+                        <li><a href="{% url 'home:logout' %}">Logout</a></li>
                     </ul>
                     </li>
                 </ul>
