--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -3,52 +3,107 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+            crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
+
+    <style>
+        {# TODO: migrar este código para um arquivo CSS separado #}
+        body {
+            min-height: 75rem;
+            padding-top: 4.5rem;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Saúde em Jogo</a>
-            </div>
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Saúde em Jogo</a>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li {% block home %}{% endblock %} >
+                <a class="nav-link" href="{% url 'home:index' %}">Home{% block home_span %}{% endblock %}
+                </a>
+            </li>
+            <li {% block base_aplicar_dinamica %}{% endblock %} class="nav-item">
+                <a class="nav-link" href="{% url 'home:base_aplicar_dinamica' %}">Aplicar
+                    Dinâmica{% block base_aplicar_dinamica_span %}{% endblock %}</a>
+            </li>
+            <li {% block base_configuracoes %}{% endblock %} class="nav-item">
+                <a class="nav-link" href="{% url 'home:base_configuracoes' %}">Configurações{% block base_configuracoes_span %}{% endblock %}</a>
+            </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'home:logout' %}"><button class="btn btn-outline-danger my-2 my-sm-0">Logout</button></a>
+                {% else %}
+                    <a href="{% url 'home:login' %}"><button class="btn btn-outline-success my-2 my-sm-0">Login</button></a>
+                {% endif %}
+            </button>
+        </form>
+    </div>
+</nav>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li {% block home %}{% endblock %}><a href="{% url 'home:index' %}">Home{% block home_span %}{% endblock %}</a></li>
-                    <li {% block base_aplicar_dinamica %}{% endblock %}><a href="{% url 'home:base_aplicar_dinamica' %}">Aplicar Dinâmica{% block base_aplicar_dinamica_span %}{% endblock %}</a></li>
-                    <li {% block base_configuracoes %}{% endblock %}><a href="{% url 'home:base_configuracoes' %}">Configurações{% block base_configuracoes_span %}{% endblock %}</a></li>
 
-                </ul>
+{#    <nav class="navbar navbar-light navbar-fixed-top">#}
+{#<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">#}
+{#    <div class="container-fluid">#}
+{#        <!-- Brand and toggle get grouped for better mobile display -->#}
+{#        <div class="navbar-header">#}
+{#            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse"#}
+{#                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">#}
+{#                <span class="sr-only">Toggle navigation</span>#}
+{#                <span class="icon-bar"></span>#}
+{#                <span class="icon-bar"></span>#}
+{#                <span class="icon-bar"></span>#}
+{#            </button>#}
+{#            <a class="navbar-brand" href="#">Saúde em Jogo</a>#}
+{#        </div>#}
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="">Admin</a></li>
-                        <li><a href="#">Usuario</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="{% url 'home:logout' %}">Logout</a></li>
-                    </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+{#        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">#}
+{#            <ul class="nav navbar-nav">#}
+{#                <li {% block home %}{% endblock %}><a#}
+{#                        href="{% url 'home:index' %}">Home{% block home_span %}{% endblock %}</a></li>#}
+{#                <li {% block base_aplicar_dinamica %}{% endblock %}><a href="{% url 'home:base_aplicar_dinamica' %}">Aplicar#}
+{#                    Dinâmica{% block base_aplicar_dinamica_span %}{% endblock %}</a></li>#}
+{#                <li {% block base_configuracoes %}{% endblock %}><a href="{% url 'home:base_configuracoes' %}">Configurações{% block base_configuracoes_span %}{% endblock %}</a>#}
+{#                </li>#}
+
+{#            </ul>#}
+
+{#            <ul class="nav navbar-nav navbar-right">#}
+{#                <li class="dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"#}
+{#                       aria-expanded="false">Login <span class="caret"></span></a>#}
+{#                    <ul class="dropdown-menu">#}
+{#                        <li><a href="">Admin</a></li>#}
+{#                        <li><a href="#">Usuario</a></li>#}
+{#                        <li role="separator" class="divider"></li>#}
+{#                        <li><a href="{% url 'home:logout' %}">Logout</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#            </ul>#}
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
     {% block base_configuracoes_navbar %}{% endblock %}
-    </nav>
+</nav>
 
-    <br><br>
+<br><br>
 {% block body %}
 {% endblock %}
 </body>
