--- a/home/templates/home/base_configuracoes.html
+++ b/home/templates/home/base_configuracoes.html
@@ -2,11 +2,46 @@
 {% block base_configuracoes %}class="active"{% endblock %}
 {% block base_configuracoes_span %}<span class="sr-only">(current)</span>{% endblock %}
 {% block base_configuracoes_navbar %}
+    <nav class="navbar navbar-light bg-faded rounded navbar-toggleable-md">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#containerNavbar" aria-controls="containerNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="containerNavbar">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-md-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
 
-        <div class="container-fluid">
+        <div class="container">
+
+
+
+
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="navbar-nav">
                      <li {% block medico %}{% endblock %}><a href="{% url 'medico:medico_index' %}">Médicos{% block medico_span %}{% endblock %}</a></li>
                     <li {% block area %}{% endblock %}><a href="{% url 'area:area_index' %}">Áreas{% block area_span %}{% endblock %}</a></li>
                     <li {% block modulo %}{% endblock %}><a href="{% url 'modulo:modulo_index' %}">Módulos{% block modulo_span %}{% endblock %}</a></li>
@@ -19,4 +54,21 @@
         </div><!-- /.container-fluid -->
 
 
+
+
 {% endblock %}
+
+
+{#<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">#}
+{#    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"#}
+{#            data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"#}
+{#            aria-label="Toggle navigation">#}
+{#        <span class="navbar-toggler-icon"></span>#}
+{#    </button>#}
+{#    <a class="navbar-brand" href="#">Saúde em Jogo</a>#}
+{#    <div class="collapse navbar-collapse" id="navbarCollapse">#}
+{#        <ul class="navbar-nav mr-auto">#}
+{#            <li {% block home %}{% endblock %} >#}
+{#                <a class="nav-link" href="{% url 'home:index' %}">Home{% block home_span %}{% endblock %}#}
+{#                </a>#}
+{#            </li>#}
