--- a/home/templates/home/base_configuracoes.html
+++ b/home/templates/home/base_configuracoes.html
@@ -14,6 +14,7 @@
                     <li {% block classe_social %}{% endblock %}><a href="{% url 'classe_social:classe_social_index' %}">Classes Sociais{% block classe_social_span %}{% endblock %}</a></li>
                     <li {% block evento %}{% endblock %}><a href="{% url 'evento:evento_index' %}">Eventos{% block evento_span %}{% endblock %}</a></li>
                     <li {% block cenario %}{% endblock %}><a href="{% url 'cenario:cenario_index' %}">Cenários{% block cenario_span %}{% endblock %}</a></li>
+                    <li {% block rodada %}{% endblock %}><a href="{% url 'rodada:rodada_index' %}">Rodadas{% block rodada_span %}{% endblock %}</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
